引入vue.js文件，创建样式表

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>day06-task2-陈建义</title>
-    <script src="https://unpkg.com/vue@next"></script>
+    <link rel="stylesheet" href="./index.css">nk
+    <script src="./utils/vue.global.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,6 @@
                 }
             }
         }
-
         Vue.createApp(app).mount('#app')
     </script>
 </body>
