--- a/day6task2/index.html
+++ b/day6task2/index.html
@@ -6,12 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>day06-task2-陈建义</title>
-    <link rel="stylesheet" href="./index.css">nk
+    <link rel="stylesheet" href="./index.css">
     <script src="./utils/vue.global.js"></script>
+    <style lang="">
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        html,
+        body,
+        #app {
+            width: 100vw;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="app">{{message}}</div>
+    <div id="app"><img class="bgImg" src="./imgs/bgImg.png" alt="" srcset=""></div>
     <script>
         const app = {
             data() {
